Update terminology from model to plugin_resource.

--- a/nbs/core/management_config.ipynb
+++ b/nbs/core/management_config.ipynb
@@ -63,18 +63,18 @@
     "            \"description\": \"External processes using more than this percentage of GPU memory are considered conflicts\",\n",
     "            \"minimum\": 1,\n",
     "            \"maximum\": 99,\n",
-    "            \"default\": 35.0\n",
+    "            \"default\": 45.0\n",
     "        },\n",
     "        \"enable_auto_unload\": {\n",
     "            \"type\": \"boolean\",\n",
-    "            \"title\": \"Auto-Unload Idle Models\",\n",
-    "            \"description\": \"Automatically unload idle models when switching to a different plugin\",\n",
+    "            \"title\": \"Auto-Unload Idle Plugins\",\n",
+    "            \"description\": \"Automatically unload idle plugins when switching to a different plugin\",\n",
     "            \"default\": True\n",
     "        },\n",
     "        \"enable_auto_reload\": {\n",
     "            \"type\": \"boolean\",\n",
-    "            \"title\": \"Auto-Reload Models\",\n",
-    "            \"description\": \"Automatically reload models when configuration changes\",\n",
+    "            \"title\": \"Auto-Reload Plugins\",\n",
+    "            \"description\": \"Automatically reload plugins when configuration changes\",\n",
     "            \"default\": True\n",
     "        }\n",
     "    },\n",
