--- a/nbs/core/validation.ipynb
+++ b/nbs/core/validation.ipynb
@@ -148,9 +148,9 @@
     "\n",
     "The validation logic handles several scenarios:\n",
     "\n",
-    "1. **CPU-based models**: Check system memory availability\n",
-    "2. **API-based models**: Skip resource validation\n",
-    "3. **GPU-based models**: Check GPU availability and handle conflicts\n",
+    "1. **CPU-based plugins**: Check system memory availability\n",
+    "2. **API-based plugins**: Skip resource validation\n",
+    "3. **GPU-based plugins**: Check GPU availability and handle conflicts\n",
     "4. **Plugin switching**: Detect when plugins need to be reloaded\n",
     "5. **Resource conflicts**: Identify conflicts with app workers or external processes"
    ]
@@ -210,7 +210,7 @@
     "    # Check system memory if using CPU\n",
     "    if requirements['is_local'] and requirements['device'].lower() == 'cpu':\n",
     "        if verbose:\n",
-    "            print(\"→ CPU-based model, checking system memory...\")\n",
+    "            print(\"→ CPU-based plugin, checking system memory...\")\n",
     "\n",
     "        # TODO: Add comprehensive system memory validation\n",
     "        # For now, just log current memory status\n",
@@ -228,17 +228,17 @@
     "            if verbose:\n",
     "                print(\"   ⚠ psutil not available, skipping memory check\")\n",
     "\n",
-    "        # For now, always proceed for CPU models\n",
+    "        # For now, always proceed for CPU plugins\n",
     "        if verbose:\n",
     "            print(\"✓ System memory check passed (basic)\")\n",
     "            print(\"=== Resource Validation Complete ===\\n\")\n",
     "        return ValidationResult(\n",
     "            action=ValidationAction.PROCEED,\n",
     "            can_proceed=True,\n",
-    "            message=\"CPU-based model. System memory check passed.\"\n",
+    "            message=\"CPU-based plugin. System memory check passed.\"\n",
     "        )\n",
     "\n",
-    "    # If not a local model or doesn't use GPU, no validation needed\n",
+    "    # If not a local plugin or doesn't use GPU, no validation needed\n",
     "    if not requirements['is_local'] or not requirements['uses_gpu']:\n",
     "        if verbose:\n",
     "            print(\"✓ No GPU resources required\")\n",
