--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -415,7 +415,7 @@
     "\n",
     "```python\n",
     "from cjm_fasthtml_resources.utils.plugin_utils import (\n",
-    "    is_local_model_plugin,\n",
+    "    is_local_plugin,\n",
     "    uses_gpu_device,\n",
     "    get_plugin_resource_identifier,\n",
     "    compare_plugin_resources,\n",
@@ -426,25 +426,25 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def is_local_model_plugin(plugin_meta) -> bool:\n",
+    "def is_local_plugin(plugin_meta) -> bool:\n",
     "    \"\"\"\n",
-    "    Check if a plugin uses a local model (vs API-based).\n",
+    "    Check if a plugin is local (vs API-based).\n",
     "    \n",
     "    Args:\n",
     "        plugin_meta: Plugin metadata with config_schema attribute\n",
     "    \n",
     "    Returns:\n",
-    "        True if plugin uses local model, False if API-based\n",
+    "        True if plugin is local, False if API-based\n",
     "    \"\"\"\n",
     "    if not hasattr(plugin_meta, 'config_schema') or not plugin_meta.config_schema\n",
     "    \"\"\"\n",
-    "    Check if a plugin uses a local model (vs API-based).\n",
+    "    Check if a plugin is local (vs API-based).\n",
     "    \n",
     "    Args:\n",
     "        plugin_meta: Plugin metadata with config_schema attribute\n",
     "    \n",
     "    Returns:\n",
-    "        True if plugin uses local model, False if API-based\n",
+    "        True if plugin is local, False if API-based\n",
     "    \"\"\"\n",
     "```\n",
     "\n",
@@ -536,7 +536,7 @@
     "    \n",
     "    Returns:\n",
     "        Dictionary with resource requirement information:\n",
-    "        - is_local: Whether it's a local model\n",
+    "        - is_local: Whether it's a local plugin\n",
     "        - uses_gpu: Whether it uses GPU\n",
     "        - plugin_resource: Resource identifier\n",
     "        - device: Device configuration\n",
