--- a/nbs/utils/plugin_utils.ipynb
+++ b/nbs/utils/plugin_utils.ipynb
@@ -62,15 +62,15 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def is_local_model_plugin(plugin_meta) -> bool:\n",
+    "def is_local_plugin(plugin_meta) -> bool:\n",
     "    \"\"\"\n",
-    "    Check if a plugin uses a local model (vs API-based).\n",
+    "    Check if a plugin is local (vs API-based).\n",
     "    \n",
     "    Args:\n",
     "        plugin_meta: Plugin metadata with config_schema attribute\n",
     "    \n",
     "    Returns:\n",
-    "        True if plugin uses local model, False if API-based\n",
+    "        True if plugin is local, False if API-based\n",
     "    \"\"\"\n",
     "    if not hasattr(plugin_meta, 'config_schema') or not plugin_meta.config_schema:\n",
     "        return False\n",
@@ -88,7 +88,7 @@
     "Example plugin metadata structure:\n",
     "\n",
     "```python\n",
-    "# Local model plugin\n",
+    "# Local plugin\n",
     "local_plugin = PluginMetadata(\n",
     "    name=\"whisper\",\n",
     "    config_schema={\n",
@@ -310,21 +310,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A vs B (same model): True\n",
-      "A vs C (different model): False\n",
-      "B vs C (different model): False\n"
+      "A vs B (same resource): True\n",
+      "A vs C (different resource): False\n",
+      "B vs C (different resource): False\n"
      ]
     }
    ],
    "source": [
     "# Example: Compare configurations\n",
     "config_a = {\"model_id\": \"whisper-large-v3\", \"device\": \"cuda\"}\n",
-    "config_b = {\"model_id\": \"whisper-large-v3\", \"device\": \"cpu\"}  # Same model, different device\n",
-    "config_c = {\"model_id\": \"whisper-medium\", \"device\": \"cuda\"}  # Different model\n",
+    "config_b = {\"model_id\": \"whisper-large-v3\", \"device\": \"cpu\"}  # Same resource, different device\n",
+    "config_c = {\"model_id\": \"whisper-medium\", \"device\": \"cuda\"}  # Different resource\n",
     "\n",
-    "print(f\"A vs B (same model): {compare_plugin_resources(config_a, config_b)}\")\n",
-    "print(f\"A vs C (different model): {compare_plugin_resources(config_a, config_c)}\")\n",
-    "print(f\"B vs C (different model): {compare_plugin_resources(config_b, config_c)}\")"
+    "print(f\"A vs B (same resource): {compare_plugin_resources(config_a, config_b)}\")\n",
+    "print(f\"A vs C (different resource): {compare_plugin_resources(config_a, config_c)}\")\n",
+    "print(f\"B vs C (different resource): {compare_plugin_resources(config_b, config_c)}\")"
    ]
   },
   {
@@ -360,7 +360,7 @@
     "    \n",
     "    Returns:\n",
     "        Dictionary with resource requirement information:\n",
-    "        - is_local: Whether it's a local model\n",
+    "        - is_local: Whether it's a local plugin\n",
     "        - uses_gpu: Whether it uses GPU\n",
     "        - plugin_resource: Resource identifier\n",
     "        - device: Device configuration\n",
@@ -374,7 +374,7 @@
     "            'plugin_resource': None\n",
     "        }\n",
     "\n",
-    "    is_local = is_local_model_plugin(plugin_meta)\n",
+    "    is_local = is_local_plugin(plugin_meta)\n",
     "\n",
     "    if not is_local:\n",
     "        return {\n",
