Update to support cjm_fasthtml_plugins library.

--- a/nbs/core/manager.ipynb
+++ b/nbs/core/manager.ipynb
@@ -39,9 +39,14 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Dict, Any, Optional, List, Set\n",
+    "from typing import Dict, Any, Optional, List, Set, TYPE_CHECKING\n",
     "from enum import Enum\n",
-    "from dataclasses import dataclass"
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "# Import from cjm-fasthtml-plugins for enhanced plugin support\n",
+    "if TYPE_CHECKING:\n",
+    "    from cjm_fasthtml_plugins.core.execution_mode import PluginExecutionMode\n",
+    "    from cjm_fasthtml_plugins.core.metadata import RemoteResourceInfo"
    ]
   },
   {
@@ -122,7 +127,10 @@
     "#| export\n",
     "@dataclass\n",
     "class WorkerState:\n",
-    "    \"\"\"State of a worker process.\"\"\"\n",
+    "    \"\"\"State of a worker process.\n",
+    "    \n",
+    "    Enhanced to support lifecycle-aware and cloud-aware plugins from cjm-fasthtml-plugins.\n",
+    "    \"\"\"\n",
     "    pid: int\n",
     "    worker_type: str  # e.g., \"transcription\", \"llm\"\n",
     "    job_id: Optional[str] = None\n",
@@ -130,7 +138,17 @@
     "    plugin_name: Optional[str] = None\n",
     "    loaded_plugin_resource: Optional[str] = None  # The plugin resource identifier currently loaded\n",
     "    config: Optional[Dict[str, Any]] = None  # Current plugin configuration\n",
-    "    status: str = \"idle\"  # idle, running, busy"
+    "    status: str = \"idle\"  # idle, running, busy\n",
+    "    \n",
+    "    # Extended for lifecycle-aware plugins (from cjm-fasthtml-plugins)\n",
+    "    execution_mode: Optional[str] = None  # Execution mode (in_process, subprocess, cloud_gpu, etc.)\n",
+    "    child_pids: List[int] = field(default_factory=list)  # PIDs of child processes\n",
+    "    container_id: Optional[str] = None  # Docker container ID if applicable\n",
+    "    conda_env: Optional[str] = None  # Conda environment name if applicable\n",
+    "    \n",
+    "    # Extended for cloud-aware plugins\n",
+    "    is_remote: bool = False  # Whether this worker uses remote/cloud resources\n",
+    "    remote_resource: Optional[Dict[str, Any]] = None  # Remote resource info (serialized RemoteResourceInfo)"
    ]
   },
   {
@@ -163,6 +181,20 @@
     "print(f\"Worker type: {worker.worker_type}\")\n",
     "print(f\"Plugin: {worker.plugin_name}\")\n",
     "print(f\"Status: {worker.status}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "iqm6avaz2b",
+   "metadata": {},
+   "source": [
+    "### Enhanced Worker State\n",
+    "\n",
+    "The `WorkerState` dataclass now supports lifecycle-aware and cloud-aware plugins:\n",
+    "- **Lifecycle fields**: `execution_mode`, `child_pids`, `container_id`, `conda_env`\n",
+    "- **Cloud fields**: `is_remote`, `remote_resource`\n",
+    "\n",
+    "These fields are optional and only used when working with plugins from `cjm-fasthtml-plugins` that implement the `LifecycleAwarePlugin` or `CloudAwarePlugin` protocols."
    ]
   },
   {
@@ -211,6 +243,8 @@
     "    \n",
     "    Tracks PIDs associated with application workers (transcription, LLM, etc.)\n",
     "    and provides methods to check resource availability and conflicts.\n",
+    "    \n",
+    "    Enhanced to support lifecycle-aware and cloud-aware plugins from cjm-fasthtml-plugins.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, gpu_memory_threshold_percent: float = 45.0):\n",
@@ -223,6 +257,7 @@
     "        \"\"\"\n",
     "        self._worker_states: Dict[int, WorkerState] = {}  # pid -> WorkerState\n",
     "        self._job_to_pid: Dict[str, int] = {}  # job_id -> pid\n",
+    "        self._child_to_parent: Dict[int, int] = {}  # child_pid -> parent_pid\n",
     "        self.gpu_memory_threshold_percent = gpu_memory_threshold_percent\n",
     "\n",
     "    def register_worker(\n",
@@ -233,7 +268,8 @@
     "        plugin_id: Optional[str] = None,\n",
     "        plugin_name: Optional[str] = None,\n",
     "        loaded_plugin_resource: Optional[str] = None,\n",
-    "        config: Optional[Dict[str, Any]] = None\n",
+    "        config: Optional[Dict[str, Any]] = None,\n",
+    "        plugin_instance: Optional[Any] = None  # NEW: Optional plugin instance for lifecycle/cloud detection\n",
     "    ) -> None:\n",
     "        \"\"\"\n",
     "        Register a worker process with the resource manager.\n",
@@ -246,7 +282,9 @@
     "            plugin_name: Optional plugin name\n",
     "            loaded_plugin_resource: Optional identifier of the loaded plugin resource\n",
     "            config: Optional plugin configuration\n",
+    "            plugin_instance: Optional plugin instance for lifecycle/cloud protocol detection\n",
     "        \"\"\"\n",
+    "        # Create base worker state\n",
     "        worker = WorkerState(\n",
     "            pid=pid,\n",
     "            worker_type=worker_type,\n",
@@ -257,10 +295,67 @@
     "            config=config,\n",
     "            status=\"idle\"\n",
     "        )\n",
+    "        \n",
+    "        # If plugin instance provided, check for lifecycle/cloud awareness\n",
+    "        if plugin_instance:\n",
+    "            try:\n",
+    "                from cjm_fasthtml_plugins.protocols.lifecycle import is_lifecycle_aware\n",
+    "                from cjm_fasthtml_plugins.protocols.cloud_aware import is_cloud_aware\n",
+    "                \n",
+    "                # Check lifecycle awareness\n",
+    "                if is_lifecycle_aware(plugin_instance):\n",
+    "                    worker.execution_mode = plugin_instance.get_execution_mode().value\n",
+    "                    worker.child_pids = plugin_instance.get_child_pids()\n",
+    "                    \n",
+    "                    # Track child -> parent mapping\n",
+    "                    for child_pid in worker.child_pids:\n",
+    "                        self._child_to_parent[child_pid] = pid\n",
+    "                    \n",
+    "                    # Get managed resources info\n",
+    "                    resources = plugin_instance.get_managed_resources()\n",
+    "                    if 'container_id' in resources:\n",
+    "                        worker.container_id = resources['container_id']\n",
+    "                    if 'conda_env' in resources:\n",
+    "                        worker.conda_env = resources['conda_env']\n",
+    "                \n",
+    "                # Check cloud awareness\n",
+    "                if is_cloud_aware(plugin_instance):\n",
+    "                    remote_info = plugin_instance.get_remote_resource_info()\n",
+    "                    if remote_info:\n",
+    "                        worker.is_remote = True\n",
+    "                        # Serialize RemoteResourceInfo to dict for storage\n",
+    "                        worker.remote_resource = {\n",
+    "                            'provider': remote_info.provider.value if hasattr(remote_info.provider, 'value') else str(remote_info.provider),\n",
+    "                            'region': remote_info.region,\n",
+    "                            'instance_id': remote_info.instance_id,\n",
+    "                            'status': remote_info.status,\n",
+    "                            'ssh_host': remote_info.ssh_host,\n",
+    "                            'gpu_count': remote_info.gpu_count,\n",
+    "                            'gpu_type': remote_info.gpu_type,\n",
+    "                            'estimated_cost_per_hour': remote_info.estimated_cost_per_hour\n",
+    "                        }\n",
+    "            except ImportError:\n",
+    "                # cjm-fasthtml-plugins not available, skip protocol checks\n",
+    "                pass\n",
+    "        \n",
     "        self._worker_states[pid] = worker\n",
     "\n",
     "        if job_id:\n",
     "            self._job_to_pid[job_id] = pid\n",
+    "    \n",
+    "    def get_all_related_pids(self, parent_pid: int) -> List[int]:\n",
+    "        \"\"\"Get parent PID and all child PIDs managed by this worker.\n",
+    "        \n",
+    "        Args:\n",
+    "            parent_pid: Parent worker PID\n",
+    "        \n",
+    "        Returns:\n",
+    "            List of all PIDs (parent + children)\n",
+    "        \"\"\"\n",
+    "        worker = self._worker_states.get(parent_pid)\n",
+    "        if not worker:\n",
+    "            return [parent_pid]\n",
+    "        return [parent_pid] + worker.child_pids\n",
     "\n",
     "    def update_worker_state(\n",
     "        self,\n",
@@ -318,6 +413,12 @@
     "        \"\"\"\n",
     "        if pid in self._worker_states:\n",
     "            worker = self._worker_states[pid]\n",
+    "            \n",
+    "            # Clean up child PID mappings\n",
+    "            for child_pid in worker.child_pids:\n",
+    "                if child_pid in self._child_to_parent:\n",
+    "                    del self._child_to_parent[child_pid]\n",
+    "            \n",
     "            if worker.job_id and worker.job_id in self._job_to_pid:\n",
     "                del self._job_to_pid[worker.job_id]\n",
     "            del self._worker_states[pid]\n",
@@ -338,8 +439,19 @@
     "        return list(self._worker_states.values())\n",
     "\n",
     "    def get_app_pids(self) -> Set[int]:\n",
-    "        \"\"\"Get all PIDs managed by this application.\"\"\"\n",
+    "        \"\"\"Get all PIDs managed by this application (parents only).\"\"\"\n",
     "        return set(self._worker_states.keys())\n",
+    "    \n",
+    "    def get_all_app_pids_including_children(self) -> Set[int]:\n",
+    "        \"\"\"Get all PIDs managed by this application including child processes.\n",
+    "        \n",
+    "        Returns:\n",
+    "            Set of all PIDs (parents and children)\n",
+    "        \"\"\"\n",
+    "        all_pids = set(self._worker_states.keys())\n",
+    "        for worker in self._worker_states.values():\n",
+    "            all_pids.update(worker.child_pids)\n",
+    "        return all_pids\n",
     "\n",
     "    def get_workers_by_type(self, worker_type: str) -> List[WorkerState]:\n",
     "        \"\"\"\n",
@@ -373,6 +485,29 @@
     "            True if at least one worker of this type exists\n",
     "        \"\"\"\n",
     "        return any(w.worker_type == worker_type for w in self._worker_states.values())\n",
+    "    \n",
+    "    def get_cloud_workers(self) -> List[WorkerState]:\n",
+    "        \"\"\"Get all workers using cloud/remote resources.\n",
+    "        \n",
+    "        Returns:\n",
+    "            List of workers with is_remote=True\n",
+    "        \"\"\"\n",
+    "        return [w for w in self._worker_states.values() if w.is_remote]\n",
+    "    \n",
+    "    def estimate_total_cloud_cost(self, duration_hours: float = 1.0) -> float:\n",
+    "        \"\"\"Estimate total cost of all running cloud resources.\n",
+    "        \n",
+    "        Args:\n",
+    "            duration_hours: Duration to estimate for (default 1 hour)\n",
+    "        \n",
+    "        Returns:\n",
+    "            Total estimated cost in USD\n",
+    "        \"\"\"\n",
+    "        total = 0.0\n",
+    "        for worker in self.get_cloud_workers():\n",
+    "            if worker.remote_resource and worker.remote_resource.get('estimated_cost_per_hour'):\n",
+    "                total += worker.remote_resource['estimated_cost_per_hour'] * duration_hours\n",
+    "        return total\n",
     "\n",
     "    def check_gpu_availability(self) -> ResourceConflict:\n",
     "        \"\"\"\n",
@@ -380,6 +515,8 @@
     "        \n",
     "        Uses configurable GPU memory threshold to determine if external processes\n",
     "        are using significant GPU resources.\n",
+    "        \n",
+    "        Enhanced to detect child processes from lifecycle-aware plugins.\n",
     "        \n",
     "        Returns:\n",
     "            ResourceConflict with details about GPU usage\n",
@@ -420,7 +557,8 @@
     "\n",
     "        # Get all processes using GPU\n",
     "        gpu_processes = gpu_info.get('processes', [])\n",
-    "        app_pids = self.get_app_pids()\n",
+    "        # Get all app PIDs including children\n",
+    "        app_pids = self.get_all_app_pids_including_children()\n",
     "\n",
     "        app_gpu_pids = []\n",
     "        external_gpu_pids = []\n",
@@ -438,7 +576,14 @@
     "\n",
     "            if pid in app_pids:\n",
     "                app_gpu_pids.append(pid)\n",
-    "                app_gpu_processes.append(proc)\n",
+    "                # Add parent info if this is a child process\n",
+    "                parent_pid = self._child_to_parent.get(pid)\n",
+    "                proc_info = dict(proc)\n",
+    "                if parent_pid:\n",
+    "                    parent_worker = self._worker_states.get(parent_pid)\n",
+    "                    proc_info['parent_pid'] = parent_pid\n",
+    "                    proc_info['parent_worker_type'] = parent_worker.worker_type if parent_worker else None\n",
+    "                app_gpu_processes.append(proc_info)\n",
     "            else:\n",
     "                # Only count as external conflict if using significant memory\n",
     "                if memory_percent >= self.gpu_memory_threshold_percent:\n",
@@ -492,7 +637,8 @@
     "        proc_info = get_process_info(top_n=20)\n",
     "        top_memory = proc_info.get('top_memory', [])\n",
     "\n",
-    "        app_pids = self.get_app_pids()\n",
+    "        # Get all app PIDs including children\n",
+    "        app_pids = self.get_all_app_pids_including_children()\n",
     "\n",
     "        app_mem_pids = []\n",
     "        external_mem_pids = []\n",
@@ -587,6 +733,80 @@
     "# Unregister worker\n",
     "manager.unregister_worker(12345)\n",
     "print(f\"Workers after unregister: {len(manager.get_all_workers())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sc1qss8u7h",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worker PID: 12345\n",
+      "Execution mode: subprocess\n",
+      "Child PIDs: [99001, 99002, 99003]\n",
+      "All related PIDs: [12345, 99001, 99002, 99003]\n",
+      "All app PIDs (including children): [12345, 99001, 99002, 99003]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Mock lifecycle-aware plugin\n",
+    "class MockVLLMPlugin:\n",
+    "    \"\"\"Simulates a vLLM plugin that spawns child processes.\"\"\"\n",
+    "    def get_execution_mode(self):\n",
+    "        from enum import Enum\n",
+    "        class MockMode(Enum):\n",
+    "            SUBPROCESS = \"subprocess\"\n",
+    "        return MockMode.SUBPROCESS\n",
+    "    \n",
+    "    def get_child_pids(self):\n",
+    "        return [99001, 99002, 99003]  # Mock child PIDs\n",
+    "    \n",
+    "    def get_managed_resources(self):\n",
+    "        return {\n",
+    "            'server_url': 'http://localhost:8000',\n",
+    "            'is_running': True\n",
+    "        }\n",
+    "    \n",
+    "    def force_cleanup(self):\n",
+    "        pass\n",
+    "\n",
+    "# Register worker with lifecycle-aware plugin\n",
+    "manager = ResourceManager()\n",
+    "mock_plugin = MockVLLMPlugin()\n",
+    "\n",
+    "# The manager will automatically detect child processes\n",
+    "manager.register_worker(\n",
+    "    pid=12345,\n",
+    "    worker_type=\"transcription\",\n",
+    "    plugin_id=\"transcription_voxtral_vllm\",\n",
+    "    plugin_name=\"voxtral_vllm\",\n",
+    "    plugin_instance=mock_plugin\n",
+    ")\n",
+    "\n",
+    "worker = manager.get_worker_by_pid(12345)\n",
+    "print(f\"Worker PID: {worker.pid}\")\n",
+    "print(f\"Execution mode: {worker.execution_mode}\")\n",
+    "print(f\"Child PIDs: {worker.child_pids}\")\n",
+    "print(f\"All related PIDs: {manager.get_all_related_pids(12345)}\")\n",
+    "print(f\"All app PIDs (including children): {sorted(manager.get_all_app_pids_including_children())}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7frufg2wftu",
+   "metadata": {},
+   "source": [
+    "### Example: Enhanced Usage with Lifecycle/Cloud Plugins\n",
+    "\n",
+    "When using plugins from `cjm-fasthtml-plugins`, the resource manager automatically detects and tracks:\n",
+    "- Child processes spawned by plugins\n",
+    "- Cloud/remote resources\n",
+    "- Container IDs and conda environments"
    ]
   },
   {
