--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -149,7 +149,11 @@
     "```python\n",
     "@dataclass\n",
     "class WorkerState:\n",
-    "    \"State of a worker process.\"\n",
+    "    \"\"\"\n",
+    "    State of a worker process.\n",
+    "    \n",
+    "    Enhanced to support lifecycle-aware and cloud-aware plugins from cjm-fasthtml-plugins.\n",
+    "    \"\"\"\n",
     "    \n",
     "    pid: int\n",
     "    worker_type: str  # e.g., \"transcription\", \"llm\"\n",
@@ -159,6 +163,12 @@
     "    loaded_plugin_resource: Optional[str]  # The plugin resource identifier currently loaded\n",
     "    config: Optional[Dict[str, Any]]  # Current plugin configuration\n",
     "    status: str = 'idle'  # idle, running, busy\n",
+    "    execution_mode: Optional[str]  # Execution mode (in_process, subprocess, cloud_gpu, etc.)\n",
+    "    child_pids: List[int] = field(...)  # PIDs of child processes\n",
+    "    container_id: Optional[str]  # Docker container ID if applicable\n",
+    "    conda_env: Optional[str]  # Conda environment name if applicable\n",
+    "    is_remote: bool = False  # Whether this worker uses remote/cloud resources\n",
+    "    remote_resource: Optional[Dict[str, Any]]  # Remote resource info (serialized RemoteResourceInfo)\n",
     "```\n",
     "\n",
     "```python\n",
@@ -177,6 +187,8 @@
     "    \n",
     "    Tracks PIDs associated with application workers (transcription, LLM, etc.)\n",
     "    and provides methods to check resource availability and conflicts.\n",
+    "    \n",
+    "    Enhanced to support lifecycle-aware and cloud-aware plugins from cjm-fasthtml-plugins.\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, gpu_memory_threshold_percent: float = 45.0):\n",
@@ -202,7 +214,8 @@
     "            plugin_id: Optional[str] = None,\n",
     "            plugin_name: Optional[str] = None,\n",
     "            loaded_plugin_resource: Optional[str] = None,\n",
-    "            config: Optional[Dict[str, Any]] = None\n",
+    "            config: Optional[Dict[str, Any]] = None,\n",
+    "            plugin_instance: Optional[Any] = None  # NEW: Optional plugin instance for lifecycle/cloud detection\n",
     "        ) -> None\n",
     "        \"Register a worker process with the resource manager.\n",
     "\n",
@@ -213,7 +226,27 @@
     "    plugin_id: Optional plugin unique ID\n",
     "    plugin_name: Optional plugin name\n",
     "    loaded_plugin_resource: Optional identifier of the loaded plugin resource\n",
-    "    config: Optional plugin configuration\"\n",
+    "    config: Optional plugin configuration\n",
+    "    plugin_instance: Optional plugin instance for lifecycle/cloud protocol detection\"\n",
+    "    \n",
+    "    def get_all_related_pids(self, parent_pid: int) -> List[int]:\n",
+    "            \"\"\"Get parent PID and all child PIDs managed by this worker.\n",
+    "            \n",
+    "            Args:\n",
+    "                parent_pid: Parent worker PID\n",
+    "            \n",
+    "            Returns:\n",
+    "                List of all PIDs (parent + children)\n",
+    "            \"\"\"\n",
+    "            worker = self._worker_states.get(parent_pid)\n",
+    "            if not worker\n",
+    "        \"Get parent PID and all child PIDs managed by this worker.\n",
+    "\n",
+    "Args:\n",
+    "    parent_pid: Parent worker PID\n",
+    "\n",
+    "Returns:\n",
+    "    List of all PIDs (parent + children)\"\n",
     "    \n",
     "    def update_worker_state(\n",
     "            self,\n",
@@ -270,11 +303,24 @@
     "        \"Get all registered workers.\"\n",
     "    \n",
     "    def get_app_pids(self) -> Set[int]:\n",
-    "            \"\"\"Get all PIDs managed by this application.\"\"\"\n",
+    "            \"\"\"Get all PIDs managed by this application (parents only).\"\"\"\n",
     "            return set(self._worker_states.keys())\n",
+    "        \n",
+    "        def get_all_app_pids_including_children(self) -> Set[int]\n",
+    "        \"Get all PIDs managed by this application (parents only).\"\n",
     "    \n",
-    "        def get_workers_by_type(self, worker_type: str) -> List[WorkerState]\n",
-    "        \"Get all PIDs managed by this application.\"\n",
+    "    def get_all_app_pids_including_children(self) -> Set[int]:\n",
+    "            \"\"\"Get all PIDs managed by this application including child processes.\n",
+    "            \n",
+    "            Returns:\n",
+    "                Set of all PIDs (parents and children)\n",
+    "            \"\"\"\n",
+    "            all_pids = set(self._worker_states.keys())\n",
+    "            for worker in self._worker_states.values()\n",
+    "        \"Get all PIDs managed by this application including child processes.\n",
+    "\n",
+    "Returns:\n",
+    "    Set of all PIDs (parents and children)\"\n",
     "    \n",
     "    def get_workers_by_type(self, worker_type: str) -> List[WorkerState]:\n",
     "            \"\"\"\n",
@@ -323,8 +369,8 @@
     "                True if at least one worker of this type exists\n",
     "            \"\"\"\n",
     "            return any(w.worker_type == worker_type for w in self._worker_states.values())\n",
-    "    \n",
-    "        def check_gpu_availability(self) -> ResourceConflict\n",
+    "        \n",
+    "        def get_cloud_workers(self) -> List[WorkerState]\n",
     "        \"Check if a worker of the specified type exists.\n",
     "\n",
     "Args:\n",
@@ -333,12 +379,47 @@
     "Returns:\n",
     "    True if at least one worker of this type exists\"\n",
     "    \n",
+    "    def get_cloud_workers(self) -> List[WorkerState]:\n",
+    "            \"\"\"Get all workers using cloud/remote resources.\n",
+    "            \n",
+    "            Returns:\n",
+    "                List of workers with is_remote=True\n",
+    "            \"\"\"\n",
+    "            return [w for w in self._worker_states.values() if w.is_remote]\n",
+    "        \n",
+    "        def estimate_total_cloud_cost(self, duration_hours: float = 1.0) -> float\n",
+    "        \"Get all workers using cloud/remote resources.\n",
+    "\n",
+    "Returns:\n",
+    "    List of workers with is_remote=True\"\n",
+    "    \n",
+    "    def estimate_total_cloud_cost(self, duration_hours: float = 1.0) -> float:\n",
+    "            \"\"\"Estimate total cost of all running cloud resources.\n",
+    "            \n",
+    "            Args:\n",
+    "                duration_hours: Duration to estimate for (default 1 hour)\n",
+    "            \n",
+    "            Returns:\n",
+    "                Total estimated cost in USD\n",
+    "            \"\"\"\n",
+    "            total = 0.0\n",
+    "            for worker in self.get_cloud_workers()\n",
+    "        \"Estimate total cost of all running cloud resources.\n",
+    "\n",
+    "Args:\n",
+    "    duration_hours: Duration to estimate for (default 1 hour)\n",
+    "\n",
+    "Returns:\n",
+    "    Total estimated cost in USD\"\n",
+    "    \n",
     "    def check_gpu_availability(self) -> ResourceConflict:\n",
     "            \"\"\"\n",
     "            Check GPU availability and identify conflicts.\n",
     "            \n",
     "            Uses configurable GPU memory threshold to determine if external processes\n",
     "            are using significant GPU resources.\n",
+    "            \n",
+    "            Enhanced to detect child processes from lifecycle-aware plugins.\n",
     "            \n",
     "            Returns:\n",
     "                ResourceConflict with details about GPU usage\n",
@@ -348,6 +429,8 @@
     "\n",
     "Uses configurable GPU memory threshold to determine if external processes\n",
     "are using significant GPU resources.\n",
+    "\n",
+    "Enhanced to detect child processes from lifecycle-aware plugins.\n",
     "\n",
     "Returns:\n",
     "    ResourceConflict with details about GPU usage\"\n",
