--- a/nbs/utils/plugin_utils.ipynb
+++ b/nbs/utils/plugin_utils.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Plugin Resource Utilities\n",
     "\n",
-    "> Utilities for analyzing plugin configurations and resource requirements"
+    "> Utilities for analyzing plugin configurations and resource requirements\n",
+    "\n",
+    "These utilities work with any plugin metadata that has a `config_schema` attribute, including `PluginMetadata` from `cjm-fasthtml-plugins`."
    ]
   },
   {
@@ -88,7 +90,7 @@
     "Example plugin metadata structure:\n",
     "\n",
     "```python\n",
-    "# Local plugin\n",
+    "# Local plugin (works with any metadata object with config_schema)\n",
     "local_plugin = PluginMetadata(\n",
     "    name=\"whisper\",\n",
     "    config_schema={\n",
@@ -109,7 +111,13 @@
     "        }\n",
     "    }\n",
     ")\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Compatibility**: These utilities are compatible with:\n",
+    "- `PluginMetadata` from `cjm-fasthtml-plugins`\n",
+    "- `SimplePluginRegistry` from `cjm-fasthtml-settings`\n",
+    "- `UnifiedPluginRegistry` from `cjm-fasthtml-plugins`\n",
+    "- Any custom object with a `config_schema` attribute"
    ]
   },
   {
